Fixed element shift on hover over links.

--- a/docs/_sass/jekyll-theme-minimal.scss
+++ b/docs/_sass/jekyll-theme-minimal.scss
@@ -41,7 +41,8 @@ a {
 
 a:hover, a:focus {
   color:#069;
-  font-weight: bold;
+  -webkit-text-stroke-width: thin;
+  -webkit-text-stroke-color: inherit;
 }
 
 a small {
@@ -162,7 +163,6 @@ ul.downloads {
 
 .downloads a:hover, .downloads a:focus {
   color:#675C5C;
-  font-weight:bold;
 }
 
 .downloads ul a:active {
